Fixed footer height on small devices

--- a/less/blocks/footer/footer.less
+++ b/less/blocks/footer/footer.less
@@ -5,7 +5,7 @@
 
     background: #4c4c4c;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
-    @media(max-width: @desktop) {
+    @media(min-width: @desktop) {
         height: 82px;
     }
 }
